# ZlatopolskyPractice

./: CMakeLists.txt
Task_1.62/: CMakeLists.txt  main.cpp
Task_10.54/: CMakeLists.txt  main.cpp
Task_11.191/: CMakeLists.txt  main.cpp
Task_12.285/: CMakeLists.txt  main.cpp
Task_13.52/: CMakeLists.txt  main.cpp
Task_14.59/: CMakeLists.txt  main.cpp
Task_15.29/: CMakeLists.txt  main.cpp  second.txt  third.txt
Task_16.27/: CMakeLists.txt  main.cpp
Task_17.24/: CMakeLists.txt  main.cpp
Task_2.43/: CMakeLists.txt  main.cpp
Task_3.35/: CMakeLists.txt  main.cpp
Task_4.141/: CMakeLists.txt  main.cpp
Task_5.96/: CMakeLists.txt  main.cpp
Task_6.87/: CMakeLists.txt  main.cpp
Task_7.128/: CMakeLists.txt  main.cpp
Task_8.59/: CMakeLists.txt  main.cpp
Task_9.187/: CMakeLists.txt  main.cpp
